2.0_check/ingress-dash.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.dash.one`)
    kind: Rule
    services:
    - name: traefik
      port: 8080
