2.0_check/websocket_example.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: svc-rancher-http
  namespace: cattle-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rancher.example.com`)
      middlewares:
        - name: svc-rancher-redirectscheme-to-https
      kind: Rule
      services:
        - name: rancher
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: svc-rancher-https
  namespace: cattle-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.example.com`)
      middlewares:
        - name: svc-rancher-headers
      kind: Rule
      services:
        - name: rancher
          port: 80
  tls:
    certResolver: default
    options: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: svc-rancher-redirectscheme-to-https
  namespace: cattle-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: svc-rancher-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
